test/corpus/basics.txt
================================================================================
Simple process
================================================================================

api: go run ./cmd/api

--------------------------------------------------------------------------------

(source_file
  (process_definition
    (declaration
      (process_name))
    (execution
      (command))))

================================================================================
One-shot process
================================================================================

migrate!: just db migrate

--------------------------------------------------------------------------------

(source_file
  (process_definition
    (declaration
      (process_name))
    (execution
      (command))))

================================================================================
Comment
================================================================================

# This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Process with comment
================================================================================

# Start the API server
api: go run ./cmd/api

--------------------------------------------------------------------------------

(source_file
  (comment)
  (process_definition
    (declaration
      (process_name))
    (execution
      (command))))

================================================================================
Process with environment variable
================================================================================

api: LOG_LEVEL=debug go run ./cmd/api

--------------------------------------------------------------------------------

(source_file
  (process_definition
    (declaration
      (process_name))
    (execution
      (command))))

================================================================================
Process with multiple environment variables
================================================================================

api: LOG_LEVEL=debug PORT=8080 go run ./cmd/api

--------------------------------------------------------------------------------

(source_file
  (process_definition
    (declaration
      (process_name))
    (execution
      (command))))
